--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -2,6 +2,7 @@
     display: grid;
     height: 100vh;
     place-items: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .login__form-control {
@@ -78,6 +79,49 @@
     box-shadow: 0px 0px 0px 0px #ffffff, 0px 0px 0px 0px #000000;
     transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
     cursor: pointer;
+}
+
+.logout__btn {
+    appearance: none;
+    background-color: transparent;
+    border: 0.125em solid #df4949;
+    border-radius: 0.9375em;
+    box-sizing: border-box;
+    color: #d9c0c0;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 3.75em;
+    min-width: 0;
+    outline: none;
+    padding: 1em 2.3em;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
+}
+
+.logout__btn:disabled {
+    pointer-events: none;
+}
+
+.logout__btn:hover {
+    color: #fff;
+    background-color: #1A1A1A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+
+.logout__btn:active {
+    box-shadow: none;
+    transform: translateY(0);
 }
 
 .login__submit-btn:hover {
