--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -9,6 +9,7 @@
     font-weight: 700;
     font-style: normal;
     font-size: 3rem;
+    text-align: left;
 }
 
 .scoaial__media {
@@ -21,6 +22,7 @@
 .scoaial__media a {
     color: white;
     font-size: 2rem;
+    text-decoration: underline;
 }
 
 .social__let {
@@ -57,3 +59,52 @@
     transform: scaleX(1);
     transform-origin: bottom left;
 }
+
+@media only screen and (max-width: 1300px) {
+    .about__me {
+        font-size: 2.5rem;
+        text-align: left;
+    }
+}
+
+@media (min-device-width: 20px) and (max-device-width: 500px) {}
+
+@media only screen and (max-width: 1200px) {
+    .about__me {
+        font-size: 2rem;
+    }
+}
+
+@media only screen and (max-width: 1100px) {}
+
+@media screen and (max-width: 992px) {
+    .about__me {
+        font-size: 1.8rem;
+    }
+    .scoaial__media a {
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .social__let {
+        width: 60%;
+    }
+}
+
+@media only screen and (device-width: 768px) {}
+
+@media screen and (max-width: 750px) {
+    .scoaial__media {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .social__let {
+        width: 100%;
+        justify-content: baseline;
+    }
+}
+
+@media screen and (max-width: 400px) {}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {}
