--- a/src/Components/LogerUser/LogedUser.css
+++ b/src/Components/LogerUser/LogedUser.css
@@ -21,6 +21,8 @@
     box-sizing: border-box;
     border-radius: 16px;
     background-size: 200% 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-container .form {
@@ -33,6 +35,9 @@
     display: flex;
     flex-direction: column;
     gap: 2px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-container .form-group label {
