--- a/src/Components/My_Work/Mywork.css
+++ b/src/Components/My_Work/Mywork.css
@@ -76,3 +76,69 @@
 .overlay:hover {
     opacity: 1;
 }
+
+@media only screen and (max-width: 1300px) {
+    .overlay {
+        width: 100%;
+        padding: 1rem;
+    }
+    .work__card img {
+        width: 100%;
+        height: 45rem;
+    }
+    .overlay h2 {
+        font-size: 2rem;
+        margin-bottom: 6px;
+    }
+    .overlay p {
+        font-size: 1.2rem;
+    }
+}
+
+@media (min-device-width: 20px) and (max-device-width: 500px) {}
+
+@media only screen and (max-width: 1200px) {
+    .work__card img {
+        width: 100%;
+        height: 40rem;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .overlay h2 {
+        font-size: 1.8rem;
+        margin-bottom: 6px;
+    }
+    .overlay p {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 992px) {}
+
+@media screen and (max-width: 850px) {
+    .work__card img {
+        width: 100%;
+        height: 30rem;
+    }
+    .overlay h2 {
+        font-size: 1.4rem;
+        margin-bottom: 6px;
+    }
+    .overlay p {
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .work__card img {
+        width: 100%;
+        height: 20rem;
+    }
+}
+
+@media screen and (max-width: 400px) {}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) {}
+
+@media only screen and (device-width: 768px) {}
