--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -128,8 +128,7 @@ a {
         color: var(--tertiary-color);
     }
     .navbar__mob {
-        background-color: #03012c;
-        ;
+        background-color: black;
         height: 100%;
         display: flex;
         flex-direction: column;
