--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -7,16 +7,19 @@
 
 .login__form-control {
     margin: 1rem;
-    background-color: #ffffff;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+    padding: 2rem;
     width: 30%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     gap: 10px;
-    padding: 25px;
-    border-radius: 8px;
-    color: black;
+    color: white;
+    background: rgba( 0, 0, 0, 0.15);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+    backdrop-filter: blur( 20px);
+    -webkit-backdrop-filter: blur( 20px);
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18);
 }
 
 .login__title {
@@ -38,6 +41,7 @@
     border: 1.5px solid #ecedec;
     background: transparent;
     padding-left: 10px;
+    color: white;
 }
 
 .login__input:focus {
@@ -56,28 +60,25 @@
 
 .login__input-field .login__input:focus~.login__label,
 .login__input-field .login__input:valid~.login__label {
-    top: 5px;
+    top: 0px;
     left: 5px;
     font-size: 12px;
-    color: #2d79f3;
-    background-color: #ffffff;
+    color: white;
+    /* background-color: #ffffff; */
     padding-left: 5px;
     padding-right: 5px;
 }
 
 .login__submit-btn {
-    margin-top: 30px;
-    height: 55px;
-    background: #f2f2f2;
-    border-radius: 11px;
-    border: 0;
-    outline: none;
-    color: #ffffff;
-    font-size: 18px;
-    font-weight: 700;
-    background: linear-gradient(180deg, #363636 0%, #1b1b1b 50%, #000000 100%);
-    box-shadow: 0px 0px 0px 0px #ffffff, 0px 0px 0px 0px #000000;
-    transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+    font-size: 1.5rem;
+    padding: .5rem;
+    color: white;
+    background: rgba( 0, 0, 0, 0.15);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+    backdrop-filter: blur( 20px);
+    -webkit-backdrop-filter: blur( 20px);
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18);
     cursor: pointer;
 }
 
